# kaggle-template-uv

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
components/gbdt_train/: main.py  main_cat.py  models.py
components/postprocess/: 001.py
components/preprocess/: 001.py  002.py
components/stacking/: main.py  main_cat.py  main_xgb.py  utils.py
components/train/: main.py  predict.py  runners.py
components/train/factories/: datasets.py  losses.py  models.py
yamls/: gbdt.yaml  postprocess.yaml  preprocess.yaml  stacking.yaml  svr.yaml  train.yaml
